"""
gRPC 交易服务测试用例

测试范围：
1. 已实现接口（6个）：
   - connect() - 连接交易账户
   - disconnect() - 断开账户
   - order_stock() - 提交订单
   - cancel_order_stock() - 撤销订单
   - query_stock_positions() - 查询持仓
   - query_stock_orders() - 查询订单

2. 未来实现接口（部分重要接口）：
   - order_stock_async() - 异步下单
   - query_stock_asset() - 资产查询
   - query_stock_trades() - 成交查询
   - subscribe_order_status() - 订单状态推送（双向流）
"""

import pytest
import grpc
from typing import Iterator
from datetime import datetime
import uuid

# TODO: 在 proto 文件生成后，导入对应的 pb2 和 pb2_grpc 模块
# from generated import trading_pb2, trading_pb2_grpc, common_pb2


class TestTradingGrpcService:
    """交易服务 gRPC 测试类"""

    @pytest.fixture(scope="class")
    def grpc_channel(self):
        """创建 gRPC 连接通道"""
        # TODO: 从配置文件读取 gRPC 服务地址
        channel = grpc.insecure_channel('localhost:50051')
        yield channel
        channel.close()

    @pytest.fixture(scope="class")
    def trading_stub(self, grpc_channel):
        """创建交易服务 stub"""
        # TODO: 替换为实际生成的 stub
        # return trading_pb2_grpc.TradingServiceStub(grpc_channel)
        return None

    @pytest.fixture(scope="class")
    def test_session(self, trading_stub):
        """测试会话（连接后返回 session_id）"""
        # TODO: 实际连接
        # request = trading_pb2.ConnectRequest(
        #     account_id='test_account',
        #     password='test_password',
        #     client_id=1
        # )
        # response = trading_stub.Connect(request)
        # 
        # if response.success:
        #     yield response.session_id
        #     # 测试完成后断开连接
        #     disconnect_request = trading_pb2.DisconnectRequest(
        #         session_id=response.session_id
        #     )
        #     trading_stub.Disconnect(disconnect_request)
        # else:
        #     pytest.skip("无法连接到交易服务器")
        yield "test_session_id"

    # ==================== 已实现接口测试 ====================

    class TestImplementedApis:
        """测试已实现的交易接口"""

        def test_connect_success(self, trading_stub):
            """测试成功连接账户"""
            # TODO: 使用实际的 protobuf 消息
            # request = trading_pb2.ConnectRequest(
            #     account_id='test_account',
            #     password='test_password',
            #     client_id=1
            # )
            
            # response = trading_stub.Connect(request)
            
            # assert response.success is True
            # assert response.session_id
            # assert response.account_info.account_id == 'test_account'
            # assert response.status.code == 0
            # 
            # # 清理：断开连接
            # disconnect_request = trading_pb2.DisconnectRequest(
            #     session_id=response.session_id
            # )
            # trading_stub.Disconnect(disconnect_request)
            pass

        def test_connect_invalid_credentials(self, trading_stub):
            """测试使用无效凭证连接"""
            # TODO: 测试错误处理
            # request = trading_pb2.ConnectRequest(
            #     account_id='invalid_account',
            #     password='wrong_password',
            #     client_id=1
            # )
            
            # response = trading_stub.Connect(request)
            
            # assert response.success is False
            # assert response.status.code != 0
            # assert 'error' in response.message.lower()
            pass

        def test_disconnect(self, trading_stub, test_session):
            """测试断开连接"""
            # TODO: 测试断开连接
            # request = trading_pb2.DisconnectRequest(
            #     session_id=test_session
            # )
            
            # response = trading_stub.Disconnect(request)
            
            # assert response.success is True
            # assert response.status.code == 0
            pass

        def test_disconnect_invalid_session(self, trading_stub):
            """测试断开无效会话"""
            # TODO: 测试错误处理
            # request = trading_pb2.DisconnectRequest(
            #     session_id='invalid_session_id'
            # )
            
            # response = trading_stub.Disconnect(request)
            
            # assert response.success is False
            # assert response.status.code != 0
            pass

        def test_get_account_info(self, trading_stub, test_session):
            """测试获取账户信息"""
            # TODO: 测试账户信息查询
            # request = trading_pb2.DisconnectRequest(
            #     session_id=test_session
            # )
            
            # response = trading_stub.GetAccountInfo(request)
            
            # assert response.success is True
            # assert response.account_info.account_id
            # assert response.account_info.balance >= 0
            # assert response.account_info.available_balance >= 0
            # assert response.account_info.total_asset >= 0
            pass

        def test_submit_order_buy(self, trading_stub, test_session):
            """测试提交买入订单"""
            # TODO: 测试买入订单
            # request = trading_pb2.OrderRequest(
            #     session_id=test_session,
            #     stock_code='000001.SZ',
            #     side=trading_pb2.ORDER_SIDE_BUY,
            #     order_type=trading_pb2.ORDER_TYPE_LIMIT,
            #     volume=100,
            #     price=10.50,
            #     strategy_name='test_strategy'
            # )
            
            # response = trading_stub.SubmitOrder(request)
            
            # assert response.status.code == 0
            # assert response.order.order_id
            # assert response.order.stock_code == '000001.SZ'
            # assert response.order.side == trading_pb2.ORDER_SIDE_BUY
            # assert response.order.volume == 100
            # assert response.order.price == 10.50
            pass

        def test_submit_order_sell(self, trading_stub, test_session):
            """测试提交卖出订单"""
            # TODO: 测试卖出订单
            # request = trading_pb2.OrderRequest(
            #     session_id=test_session,
            #     stock_code='000001.SZ',
            #     side=trading_pb2.ORDER_SIDE_SELL,
            #     order_type=trading_pb2.ORDER_TYPE_LIMIT,
            #     volume=100,
            #     price=11.00
            # )
            
            # response = trading_stub.SubmitOrder(request)
            # assert response.status.code == 0
            pass

        def test_submit_market_order(self, trading_stub, test_session):
            """测试提交市价单"""
            # TODO: 测试市价单
            # request = trading_pb2.OrderRequest(
            #     session_id=test_session,
            #     stock_code='000001.SZ',
            #     side=trading_pb2.ORDER_SIDE_BUY,
            #     order_type=trading_pb2.ORDER_TYPE_MARKET,
            #     volume=100,
            #     price=0  # 市价单价格为0
            # )
            
            # response = trading_stub.SubmitOrder(request)
            # assert response.status.code == 0
            pass

        def test_cancel_order(self, trading_stub, test_session):
            """测试撤销订单"""
            # TODO: 先提交订单，再撤销
            # # 1. 提交订单
            # order_request = trading_pb2.OrderRequest(
            #     session_id=test_session,
            #     stock_code='000001.SZ',
            #     side=trading_pb2.ORDER_SIDE_BUY,
            #     order_type=trading_pb2.ORDER_TYPE_LIMIT,
            #     volume=100,
            #     price=10.00
            # )
            # order_response = trading_stub.SubmitOrder(order_request)
            # order_id = order_response.order.order_id
            # 
            # # 2. 撤销订单
            # cancel_request = trading_pb2.CancelOrderRequest(
            #     session_id=test_session,
            #     order_id=order_id
            # )
            # cancel_response = trading_stub.CancelOrder(cancel_request)
            # 
            # assert cancel_response.success is True
            # assert cancel_response.status.code == 0
            pass

        def test_cancel_nonexistent_order(self, trading_stub, test_session):
            """测试撤销不存在的订单"""
            # TODO: 测试错误处理
            # request = trading_pb2.CancelOrderRequest(
            #     session_id=test_session,
            #     order_id='nonexistent_order_id'
            # )
            
            # response = trading_stub.CancelOrder(request)
            
            # assert response.success is False
            # assert response.status.code != 0
            pass

        def test_get_positions_empty(self, trading_stub, test_session):
            """测试查询持仓（空持仓）"""
            # TODO: 测试持仓查询
            # request = trading_pb2.PositionRequest(
            #     session_id=test_session
            # )
            
            # response = trading_stub.GetPositions(request)
            
            # assert response.status.code == 0
            # assert isinstance(response.positions, list)
            pass

        def test_get_positions_with_holdings(self, trading_stub, test_session):
            """测试查询持仓（有持仓）"""
            # TODO: 测试有持仓的情况
            # request = trading_pb2.PositionRequest(
            #     session_id=test_session
            # )
            
            # response = trading_stub.GetPositions(request)
            
            # assert response.status.code == 0
            # if len(response.positions) > 0:
            #     for position in response.positions:
            #         assert position.stock_code
            #         assert position.volume >= 0
            #         assert position.available_volume >= 0
            #         assert position.cost_price > 0
            pass

        def test_get_orders_all(self, trading_stub, test_session):
            """测试查询所有订单"""
            # TODO: 测试订单查询
            # request = trading_pb2.OrderListRequest(
            #     session_id=test_session
            # )
            
            # response = trading_stub.GetOrders(request)
            
            # assert response.status.code == 0
            # assert isinstance(response.orders, list)
            pass

        def test_get_orders_by_date_range(self, trading_stub, test_session):
            """测试按日期范围查询订单"""
            # TODO: 测试日期范围过滤
            # request = trading_pb2.OrderListRequest(
            #     session_id=test_session,
            #     start_date='20240101',
            #     end_date='20240131'
            # )
            
            # response = trading_stub.GetOrders(request)
            
            # assert response.status.code == 0
            # for order in response.orders:
            #     order_date = order.submitted_time[:8]  # 提取日期部分
            #     assert '20240101' <= order_date <= '20240131'
            pass

        def test_get_orders_validate_structure(self, trading_stub, test_session):
            """测试订单数据结构完整性"""
            # TODO: 验证订单结构
            # request = trading_pb2.OrderListRequest(
            #     session_id=test_session
            # )
            
            # response = trading_stub.GetOrders(request)
            
            # if len(response.orders) > 0:
            #     for order in response.orders:
            #         assert order.order_id
            #         assert order.stock_code
            #         assert order.side in [trading_pb2.ORDER_SIDE_BUY, trading_pb2.ORDER_SIDE_SELL]
            #         assert order.volume > 0
            #         assert order.status in [
            #             trading_pb2.ORDER_STATUS_PENDING,
            #             trading_pb2.ORDER_STATUS_SUBMITTED,
            #             trading_pb2.ORDER_STATUS_PARTIAL_FILLED,
            #             trading_pb2.ORDER_STATUS_FILLED,
            #             trading_pb2.ORDER_STATUS_CANCELLED
            #         ]
            pass

    # ==================== 批量操作测试 ====================

    class TestBatchOperations:
        """测试批量操作"""

        @pytest.mark.skip(reason="批量订单接口尚未实现")
        def test_submit_batch_orders_client_stream(self, trading_stub, test_session):
            """测试批量提交订单（客户端流）"""
            # TODO: 测试客户端流式批量下单
            # def order_generator():
            #     stock_codes = ['000001.SZ', '600000.SH', '000002.SZ']
            #     for code in stock_codes:
            #         yield trading_pb2.OrderRequest(
            #             session_id=test_session,
            #             stock_code=code,
            #             side=trading_pb2.ORDER_SIDE_BUY,
            #             order_type=trading_pb2.ORDER_TYPE_LIMIT,
            #             volume=100,
            #             price=10.00
            #         )
            # 
            # response = trading_stub.SubmitBatchOrders(order_generator())
            # 
            # assert response.status.code == 0
            # assert len(response.orders) == 3
            # assert response.success_count == 3
            # assert response.failed_count == 0
            pass

        @pytest.mark.skip(reason="批量订单接口尚未实现")
        def test_submit_batch_orders_partial_failure(self, trading_stub, test_session):
            """测试批量下单部分失败"""
            # TODO: 测试部分订单失败的情况
            pass

    # ==================== 资产查询测试（未来实现） ====================

    class TestAssetQueries:
        """测试资产查询接口"""

        @pytest.mark.skip(reason="资产查询接口尚未实现")
        def test_get_asset(self, trading_stub, test_session):
            """测试获取资产信息"""
            # TODO: 测试资产查询
            # request = trading_pb2.AssetRequest(
            #     session_id=test_session
            # )
            
            # response = trading_stub.GetAsset(request)
            
            # assert response.status.code == 0
            # assert response.asset.total_asset >= 0
            # assert response.asset.market_value >= 0
            # assert response.asset.cash >= 0
            # assert response.asset.available_cash >= 0
            pass

        @pytest.mark.skip(reason="成交查询接口尚未实现")
        def test_get_trades(self, trading_stub, test_session):
            """测试获取成交记录"""
            # TODO: 测试成交查询
            # request = trading_pb2.TradeListRequest(
            #     session_id=test_session
            # )
            
            # response = trading_stub.GetTrades(request)
            
            # assert response.status.code == 0
            # for trade in response.trades:
            #     assert trade.trade_id
            #     assert trade.order_id
            #     assert trade.stock_code
            #     assert trade.volume > 0
            #     assert trade.price > 0
            pass

    # ==================== 流式接口测试（未来实现） ====================

    class TestStreamingApis:
        """测试流式接口"""

        @pytest.mark.skip(reason="订单状态推送接口尚未实现")
        def test_subscribe_order_status(self, trading_stub, test_session):
            """测试订阅订单状态变更（双向流）"""
            # TODO: 测试订单状态推送
            # def request_generator():
            #     # 发送空的心跳请求
            #     import google.protobuf.empty_pb2 as empty_pb2
            #     while True:
            #         yield empty_pb2.Empty()
            #         time.sleep(1)
            # 
            # responses = trading_stub.SubscribeOrderStatus(request_generator())
            # 
            # received_count = 0
            # for notification in responses:
            #     assert notification.order.order_id
            #     assert notification.change_type in ['CREATED', 'FILLED', 'CANCELLED', 'PARTIAL_FILLED']
            #     assert notification.timestamp
            #     
            #     received_count += 1
            #     if received_count >= 5:
            #         break
            pass

        @pytest.mark.skip(reason="异步下单接口尚未实现")
        def test_order_stock_async(self, trading_stub, test_session):
            """测试异步下单"""
            # TODO: 测试异步下单接口
            pass

        @pytest.mark.skip(reason="异步撤单接口尚未实现")
        def test_cancel_order_async(self, trading_stub, test_session):
            """测试异步撤单"""
            # TODO: 测试异步撤单接口
            pass

    # ==================== 错误处理和边界测试 ====================

    class TestErrorHandling:
        """测试错误处理"""

        def test_order_with_invalid_stock_code(self, trading_stub, test_session):
            """测试使用无效股票代码下单"""
            # TODO: 测试错误处理
            # request = trading_pb2.OrderRequest(
            #     session_id=test_session,
            #     stock_code='INVALID.CODE',
            #     side=trading_pb2.ORDER_SIDE_BUY,
            #     order_type=trading_pb2.ORDER_TYPE_LIMIT,
            #     volume=100,
            #     price=10.00
            # )
            
            # response = trading_stub.SubmitOrder(request)
            # assert response.status.code != 0
            pass

        def test_order_with_invalid_volume(self, trading_stub, test_session):
            """测试使用无效数量下单"""
            # TODO: 测试数量验证
            # invalid_volumes = [0, -100, 1]  # 0、负数、不足一手
            # 
            # for volume in invalid_volumes:
            #     request = trading_pb2.OrderRequest(
            #         session_id=test_session,
            #         stock_code='000001.SZ',
            #         side=trading_pb2.ORDER_SIDE_BUY,
            #         order_type=trading_pb2.ORDER_TYPE_LIMIT,
            #         volume=volume,
            #         price=10.00
            #     )
            #     response = trading_stub.SubmitOrder(request)
            #     assert response.status.code != 0
            pass

        def test_order_with_invalid_price(self, trading_stub, test_session):
            """测试使用无效价格下单"""
            # TODO: 测试价格验证
            # invalid_prices = [0, -10.00, 1000000.00]
            # 
            # for price in invalid_prices:
            #     request = trading_pb2.OrderRequest(
            #         session_id=test_session,
            #         stock_code='000001.SZ',
            #         side=trading_pb2.ORDER_SIDE_BUY,
            #         order_type=trading_pb2.ORDER_TYPE_LIMIT,
            #         volume=100,
            #         price=price
            #     )
            #     response = trading_stub.SubmitOrder(request)
            #     assert response.status.code != 0
            pass

        def test_operation_with_expired_session(self, trading_stub):
            """测试使用过期会话操作"""
            # TODO: 测试会话过期
            # request = trading_pb2.PositionRequest(
            #     session_id='expired_session_id'
            # )
            
            # response = trading_stub.GetPositions(request)
            # assert response.status.code != 0
            pass

        def test_insufficient_balance(self, trading_stub, test_session):
            """测试余额不足"""
            # TODO: 测试余额不足的情况
            # request = trading_pb2.OrderRequest(
            #     session_id=test_session,
            #     stock_code='000001.SZ',
            #     side=trading_pb2.ORDER_SIDE_BUY,
            #     order_type=trading_pb2.ORDER_TYPE_LIMIT,
            #     volume=1000000,  # 极大数量
            #     price=10.00
            # )
            
            # response = trading_stub.SubmitOrder(request)
            # assert response.status.code != 0
            # assert 'balance' in response.status.message.lower() or 'insufficient' in response.status.message.lower()
            pass

        def test_insufficient_position_for_sell(self, trading_stub, test_session):
            """测试持仓不足无法卖出"""
            # TODO: 测试持仓不足
            # request = trading_pb2.OrderRequest(
            #     session_id=test_session,
            #     stock_code='000001.SZ',
            #     side=trading_pb2.ORDER_SIDE_SELL,
            #     order_type=trading_pb2.ORDER_TYPE_LIMIT,
            #     volume=1000000,  # 极大数量
            #     price=10.00
            # )
            
            # response = trading_stub.SubmitOrder(request)
            # assert response.status.code != 0
            pass

    # ==================== 性能和压力测试 ====================

    class TestPerformance:
        """性能测试"""

        def test_order_submission_latency(self, trading_stub, test_session):
            """测试下单延迟"""
            import time
            
            # TODO: 测试下单性能
            # latencies = []
            # 
            # for i in range(10):
            #     request = trading_pb2.OrderRequest(
            #         session_id=test_session,
            #         stock_code='000001.SZ',
            #         side=trading_pb2.ORDER_SIDE_BUY,
            #         order_type=trading_pb2.ORDER_TYPE_LIMIT,
            #         volume=100,
            #         price=10.00
            #     )
            #     
            #     start_time = time.time()
            #     response = trading_stub.SubmitOrder(request)
            #     latency = (time.time() - start_time) * 1000  # 毫秒
            #     
            #     if response.status.code == 0:
            #         latencies.append(latency)
            # 
            # avg_latency = sum(latencies) / len(latencies)
            # assert avg_latency < 100  # 平均延迟应小于100ms
            pass

        def test_concurrent_orders(self, grpc_channel, test_session):
            """测试并发下单"""
            import concurrent.futures
            
            # TODO: 测试并发下单性能
            # def submit_order(order_id):
            #     stub = trading_pb2_grpc.TradingServiceStub(grpc_channel)
            #     request = trading_pb2.OrderRequest(
            #         session_id=test_session,
            #         stock_code='000001.SZ',
            #         side=trading_pb2.ORDER_SIDE_BUY,
            #         order_type=trading_pb2.ORDER_TYPE_LIMIT,
            #         volume=100,
            #         price=10.00
            #     )
            #     return stub.SubmitOrder(request)
            # 
            # with concurrent.futures.ThreadPoolExecutor(max_workers=10) as executor:
            #     futures = [executor.submit(submit_order, i) for i in range(20)]
            #     results = [f.result() for f in concurrent.futures.as_completed(futures)]
            # 
            # success_count = sum(1 for r in results if r.status.code == 0)
            # assert success_count >= 15  # 至少75%成功
            pass

        def test_query_performance(self, trading_stub, test_session):
            """测试查询性能"""
            import time
            
            # TODO: 测试查询性能
            # start_time = time.time()
            # 
            # # 连续查询
            # for _ in range(100):
            #     request = trading_pb2.PositionRequest(session_id=test_session)
            #     trading_stub.GetPositions(request)
            # 
            # elapsed_time = time.time() - start_time
            # avg_time = elapsed_time / 100 * 1000  # 毫秒
            # 
            # assert avg_time < 50  # 平均每次查询应小于50ms
            pass

    # ==================== 未实现接口占位测试 ====================

    class TestFutureApis:
        """未来实现接口的占位测试"""

        @pytest.mark.skip(reason="信用交易接口尚未实现")
        def test_query_credit_detail(self, trading_stub, test_session):
            """测试查询信用账户资产"""
            # TODO: 实现后补充测试
            pass

        @pytest.mark.skip(reason="资金划拨接口尚未实现")
        def test_fund_transfer(self, trading_stub, test_session):
            """测试资金划拨"""
            # TODO: 实现后补充测试
            pass

        @pytest.mark.skip(reason="银证转账接口尚未实现")
        def test_bank_transfer_in(self, trading_stub, test_session):
            """测试银行转证券"""
            # TODO: 实现后补充测试
            pass

        @pytest.mark.skip(reason="银证转账接口尚未实现")
        def test_bank_transfer_out(self, trading_stub, test_session):
            """测试证券转银行"""
            # TODO: 实现后补充测试
            pass

        @pytest.mark.skip(reason="新股申购接口尚未实现")
        def test_query_new_purchase_limit(self, trading_stub, test_session):
            """测试查询新股申购额度"""
            # TODO: 实现后补充测试
            pass

        @pytest.mark.skip(reason="新股申购接口尚未实现")
        def test_query_ipo_data(self, trading_stub, test_session):
            """测试查询当日新股信息"""
            # TODO: 实现后补充测试
            pass

        @pytest.mark.skip(reason="约券接口尚未实现")
        def test_smt_query_quoter(self, trading_stub, test_session):
            """测试券源行情查询"""
            # TODO: 实现后补充测试
            pass

        @pytest.mark.skip(reason="约券接口尚未实现")
        def test_smt_negotiate_order(self, trading_stub, test_session):
            """测试约券申请"""
            # TODO: 实现后补充测试
            pass


# ==================== 辅助函数 ====================

def generate_test_order_id():
    """生成测试用订单ID"""
    return f"TEST_{uuid.uuid4().hex[:12].upper()}"


def validate_order_structure(order):
    """验证订单数据结构"""
    assert hasattr(order, 'order_id')
    assert hasattr(order, 'stock_code')
    assert hasattr(order, 'side')
    assert hasattr(order, 'order_type')
    assert hasattr(order, 'volume')
    assert hasattr(order, 'price')
    assert hasattr(order, 'status')


def validate_position_structure(position):
    """验证持仓数据结构"""
    assert hasattr(position, 'stock_code')
    assert hasattr(position, 'volume')
    assert hasattr(position, 'available_volume')
    assert hasattr(position, 'cost_price')
    assert hasattr(position, 'market_value')


def calculate_order_value(volume, price):
    """计算订单金额"""
    return volume * price


if __name__ == '__main__':
    pytest.main([__file__, '-v', '-s'])
